Update Css and Index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="mystyle.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header role="navigation">
@@ -18,7 +21,6 @@
         <li><a href="#Flexbox">Flexbox</a></li>
         <li><a href="#media-queries">Media Queries</a></li>
         <li><a href="#css-trans">Transitions</a></li>
-        <li>Animations</li>
       </ul>
     </nav>
   </header>
@@ -54,7 +56,10 @@
  <p> The 'a' tag contains a href element. This is typically used to create a hyperlink.</p>
  <p> For example; <a href="https://en.wikipedia.org/wiki/HTML">This is a link using an A tag!</a></p>
  <h3>The img / fig tags</h3>
- <figure></figure><img><figcaption></figcaption>
+ <figure>
+  <img src="Images/Happy-Face-PNG-Free-Download.png">
+  <figcaption>THE FIGURE TAG CONTAINS THE IMG and figcaption. The figcaption is the caption on the figure (img)(wow!)</figcaption>
+ </figure>
 
  <h3> The q / cite / blockquote tag</h3>
  <blockquote> 
@@ -75,6 +80,7 @@
 </section>
 <section id="css-thebest">
   <h1>CSS Properties</h1>
+  <p>Its the style of the whole webpage!</p>
 </section>
 <section id="CSS-GRID">
   <h1>What is CSS grid?</h1>
