Ensure mediaqueries work

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <h1 class="title-h1">Media Queries!</h1>
     <img src="Images/Emoji_Icon_-_Thinking_large.webp">
   </article>
-  <p>Media queries are additional ways to design your webpage and the elements within it in css that allow for accessibility when viewing a webpage. change your display perference to see!</p>
+  <p class="mq-p">Media queries are additional ways to design your webpage and the elements within it in css that allow for accessibility when viewing a webpage. change your display perference to see!</p>
 </section>
 
 <section id="animate">
