--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <p> HTML stands for HyperText Markup Language. HTML is considered the standard markup language for design of web browsers.</p>
   <div class="first-nav">
     <ul>
-      <li><p>This is an exmample of a 'p' tag. It creates regular body or paragraphs of text.</p></li>
+      <li><p class="first-p">This is an exmample of a 'p' tag. It creates regular body or paragraphs of text.</p></li>
       <li><h1>This is an example of an 'h1,' It creates a heading type </h1></li>
       <li><h2>This is an example of an 'h2.' It creates another heading type</h2></li>
       <li><h3>This is an example of an 'h3.' It creates <i>another</i> heading type</h3></li>
